feat: create cool banner and stuff + optimise edit generic dialog

--- a/src/index.css
+++ b/src/index.css
@@ -202,7 +202,7 @@
   --sidebar-foreground: oklch(0.985 0 0);
   --sidebar-primary: #3e8b70;
   --sidebar-primary-foreground: #f1f8f5;
-  --sidebar-accent: oklch(0.269 0 0);
+  --sidebar-accent: #262626;
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(0.269 0 0);
   --sidebar-ring: #3e8b70;
